fix height adjust on firefox, safari wip

--- a/packages/styles/scss/layout-components/_grid-layout.scss
+++ b/packages/styles/scss/layout-components/_grid-layout.scss
@@ -19,16 +19,21 @@
   grid-template-columns: repeat(var(--lk-col-count), minmax(0, 1fr));
   grid-template-rows: repeat(auto-fit, minmax(0px, 1fr));
   grid-gap: var(--grid-gap);
-  width: 100%;
+  // width: 100%;
+  width: max-content;
   height: 100%;
   max-width: 100%;
   max-height: 100%;
   padding: var(--grid-gap);
 
   > * {
-    width: 100%;
     height: 100%;
+    width: auto;
+    max-width: 100%;
     max-height: 100%;
+    aspect-ratio: 4 / 3;
+    margin: auto;
+    justify-content: start;
   }
 
   @media (max-width: 660px) {
